[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "infrastructure-builder"
version = "2.0.1"
authors = [
    { name="Matthias Düsterhöft", email="m.duesterhoeft@gmail.com" },
]
description = "Set up a cloud infrastructure"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
dependencies = []

[project.optional-dependencies]
aws = [
    "boto3"
]

[project.urls]
"Homepage" = "https://github.com/matdue/infrastructure-builder"
