[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "infrastructure-builder"
version = "2.0.3"
authors = [
    { name="Matthias Düsterhöft", email="m.duesterhoeft@gmail.com" },
]
description = "Set up a cloud infrastructure"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.7"
dependencies = []

[project.optional-dependencies]
aws = [
    "boto3"
]

[project.urls]
Homepage = "https://github.com/matdue/infrastructure-builder"
